<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment #2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="title_activity_keyboard">KeyboardActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="date_accept_btn_text">Accept</string>
    <string name="main_enter_an_action">Please select an action:</string>
    <string name="main_data_prompt">Data:</string>
    <string name="date_accept_btn_txt">Accept</string>
    <string name="keyboard_back_btn_txt">Back</string>
    <string name="keyboard_hide_btn_txt">Hide</string>
    <string name="menu_list_title">List</string>
    <string name="menu_keyboard_title">Keyboard</string>
    <string name="menu_date_title">Date</string>

    <string name="desert_cupcake">Cupcake</string>
    <string name="desert_donut">Donut</string>
    <string name="desert_gingerbread">Ginger Bread</string>
    <string name="desert_icecream">Ice Cream</string>
    <string name="desert_jellybean">Jelly Bean</string>
</resources>
